Resolved issue where project image is not centered when rendered on mobile devices.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -181,10 +181,10 @@ body {
 }
 
 .project-image {
-    width: 90%;
+    width: 97%;
     margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;
+    margin: auto;
     border-radius: 5px;
 }
 
@@ -193,7 +193,6 @@ body {
     flex-direction: column;
     column-gap: 15px;
 }
-
 
 .project-info-right {
     margin: 5px;
